Fixed z-index in dropdown. Added bootstrap classes in option.js.

--- a/server/src/main/resources/web/bootstrap/classic/bootstrap-adapter.css
+++ b/server/src/main/resources/web/bootstrap/classic/bootstrap-adapter.css
@@ -240,3 +240,9 @@
 .tableContainer {
     border-bottom: 1px solid var(--bs-border-color);
 }
+
+/*Bootstrap uses a fixed z-index for the some elements, and z-index of the modal-windows(1055) is higher than z-index of dropdown-menu(1000).
+    We manually set z-index in lsf-dropdown to 1070*/
+.dropdown-menu.lsf-dropdown {
+    --bs-dropdown-zindex: 1070;
+}
